fixed login screen spilling out of container when incorrect values where entered

--- a/src/App.css
+++ b/src/App.css
@@ -365,7 +365,6 @@ select:focus {
   margin: 1vmax 0;
 }
 
-
 .countryChoiceForm button {
   margin: 1.5vmax 0;
 }
@@ -479,6 +478,15 @@ select:focus {
 
 .startNewGame .ornateContainer > button {
   margin: 1vmax 0;
+}
+
+.ornateContainer.login {
+  height: 80vh;
+}
+
+.ornateContainer.login p {
+  margin: 0;
+  color: var(--colAccentLight);
 }
 
 .popup .ornateContainer {
